# serverless-and-ai

./: .gitignore  LICENSE  README.md  cdk.json  deploy.sh  destroy.sh  pyproject.toml  run_webapp.sh
cdk/: pyproject.toml
cdk/serverless_and_ai/: app.py  chatbot_api_construct.py  chatbot_api_network_construct.py  chatbot_cache_construct.py  constants.py  servcerless_and_ai_stack.py
cdk/serverless_and_ai/utils/: utils.py
chat_webapp/: chat_webapp.py
lambda_handlers/: chatbot_handler.py
utils/: cfn_reader.py  set_env_vars_for_webapp.py
